basis cleanup (Phase 1), license change to CDDL 1.1, minor bug fixes

--- a/templates/lang/help_de.ini
+++ b/templates/lang/help_de.ini
@@ -20,17 +20,17 @@ CAM_IPHOST_LABEL="Kamera-IP-Adresse oder Hostname"
 CAM_PORT_LABEL="Port"
 CAM_USERNAME_LABEL="Kamera-Benutzername"
 CAM_PASSWORD_LABEL="Kamera-Passwort"
-CAM_WATERMARK_LABEL="Mit LoxBerry Wasserzeichen"
 CAM_EMAIL_LABEL="eMail mit Bild senden"
 CAM_NAME_TEXT="Optional. Name der Kamera. Wird dem eMail Betreff in eckigen Klammern vorangestellt, wenn vorhanden."
 CAM_NOTE_TEXT="Optional. Notiz zur Kamera. z.B. Montageort. Wird nicht vom Plugin benutzt - nur zur Information."
 CAM_MODEL_TEXT="Liste der unterstützten Kameras. Wähle deine Kamera aus. Wenn deine Kamera fehlt, eröffne auf <a target='github' href='https://github.com/Woersty/LoxBerry-Plugin-cam-connect/issues/new?title=Camera-Support-Request&body=Ich+habe+eine+GIB_HIER_DEIN_KAMERAMODELL_EIN+Kamera+und+will+sie+benutzen&labels=New%20cam'>GitHub</a> einen Issue und bitte um Unterstützung."
-CAM_IMG_WIDTH_TEXT="Bildbreite des Bildes welches zum Browser oder an Loxone gesendet wird."
+CAM_IMG_WIDTH_TEXT="Bildbreite des Bildes welches zum Browser oder an Loxone gesendet wird. Das Original wird ggf. umgerechnet."
 CAM_IPHOST_TEXT="IP Adresse oder Hostname der Kamera."
 CAM_PORT_TEXT="IP Port der Kamera. Normalerweise 80."
 CAM_USERNAME_TEXT="Kamera-Login Benutzername"
 CAM_PASSWORD_TEXT="Kamera-Login Passwort"
-CAM_WATERMARK_TEXT="Versehe das Bild mit einem transparenten LoxBerry Wasserzeichen in der linken unteren Ecke."
+WATERMARK_LABEL="Mit LoxBerry Wasserzeichen"
+WATERMARK_TEXT="Versehe das Bild mit einem transparenten LoxBerry Wasserzeichen in der linken unteren Ecke."
 CAM_EMAIL_TEXT="Um eine eMail zu senden, wenn die Plugin URL aufgerufen wird. (Keine weitere eMail, wenn die URL zu schnell nacheinander aufgerufen wird. Mindestens 10 s Pause!)"
 CAM_EMAIL_RECIPIENTS_LABEL="eMail-Empfänger"
 CAM_EMAIL_RECIPIENTS_TEXT="Eine oder mehrere eMail-Adresse. Mehrere getrennt mit ; ohne Leerzeichen."
