--- a/templates/lang/language_cs.ini
+++ b/templates/lang/language_cs.ini
@@ -19,7 +19,7 @@ ERROR_INVALID_EMAIL_CFG="E06: Mailserver není nakonfigurován"
 ERROR_READING_CAM_MODEL="E07: Nelze načíst model kamery"
 ERROR_INVALID_HOST_OR_IP_CFG="E08: Špatné síťové jméno nebo IP adresa kamery."
 ERROR_PING_ERR_HOST_OR_IP="E09: Ping na IP adresu/síťový název kamery neodpovdá:"
-ERROR_IMAGE_TOO_SMALL="E10: Obraz příliš malý"
+ERROR_IMAGE_TOO_SMALL="E10: Camera answer is not usable."
 ERROR_BAD_WATERMARK_IMAGETYPE="E11: Špatný typ souboru vodoznaku. Požadován formát PNG."
 ERROR_CREATE_WATERMARK_UNDERLAY="E12: Nelze vytvořít podklad vodoznaku."
 ERROR_CREATE_WATERMARK_OVERLAY="E13: Nelze vytvořit překrytí vodoznaku.."
@@ -56,6 +56,7 @@ ERROR_PIC_WANTED="Obraz v prohlížeči je požadován, zobrazit jej teď."
 ERROR_SEND_EMAIL_INFO="Posílám e-mail, protože 'CAM_EMAIL_USED_CB' je nasatven v konfiguraci a SMTP server je nakonfigurován a 'CAM_NO_EMAIL_CB' parametr není nastaven."
 ERROR_EXIT_PLUGIN_INFO="Opustit plugin normálně nyní."
 ERROR_SEND_MAIL_INFO="Sending eMail with following sender and recipient data: Odesílám e-mail s tímto odesílatelem a adresátem."
+ERROR_INIT_CURL="Unable to initialize curl(). Probably the PHP module curl is not loaded."
 
 [SAVE]
 MY_NAME=" Cam-Connect"
@@ -118,7 +119,7 @@ CAM_NAME_SUGGESTION="Zahrada-Kamera"
 CAM_HOST_SUGGESTION="Síťový název kamery (hostname)"
 CAM_PORT_SUGGESTION="80"
 CAM_EMAIL_SENDER_SUGGESTION="LoxBerry Cam-Connect"
-CAM_EMAIL_RECIPIENTS_SUGGESTION="john@doe.cz"
+EMAIL_RECIPIENTS_SUGGESTION="john@doe.cz"
 CAM_EMAIL_SUBJECT1_SUGGESTION="Někdo byl dnes"
 CAM_EMAIL_SUBJECT2_SUGGESTION="kolem"
 CAM_EMAIL_SUBJECT3_SUGGESTION="hodiny u dveří."
@@ -148,7 +149,6 @@ CAM_NAME_HINT="Prosím vložte jméno pro Vaši kameru - maximálně 32 znaků. 
 CAM_NOTE_HINT="Prosím vložte pro svou kameru volitelnou poznámku do 128 znaků. <br><small>Ujistěte se, že použijete pouze následující povolené znaky: a-z A-Z 0-9 _ - ( ) . , : ; a mezery)<small>"
 CAM_RECIPIENTS_HINT="Prosím zadejte adresáty. Pro oddělení více e-mailových adresátů použijte středník."
 CAM_EMAIL_FROM_NAME_SUGGESTION="LoxBerry"
-EMAIL_RECIPIENTS_SUGGESTION="default@doe.cz"
 CAM_HOST_HINT="Prosím vložte IP sdresu nebo síťové jméno kamery."
 CAM_PORT_HINT="Zadejte port Vaší IP kamery"
 CAM_SELECT_OPTION="Prosím vyberte kameru"
