--- a/templates/lang/language_de.ini
+++ b/templates/lang/language_de.ini
@@ -19,7 +19,7 @@ ERROR_INVALID_EMAIL_CFG="E06: Mailserver nicht konfiguriert"
 ERROR_READING_CAM_MODEL="E07: Kann Kamera-Typ nicht einlesen"
 ERROR_INVALID_HOST_OR_IP_CFG="E08: Hostname oder IP Adresse nicht in Ordnung"
 ERROR_PING_ERR_HOST_OR_IP="E09: Kann Hostnamen bzw. IP nicht anpingen"
-ERROR_IMAGE_TOO_SMALL="E10: Bild zu klein"
+ERROR_IMAGE_TOO_SMALL="E10: Kamera-Antwort ist nicht verwertbar."
 ERROR_BAD_WATERMARK_IMAGETYPE="E11: Ungültiger Wasserzeichen-Dateityp. Muß PNG sein."
 ERROR_CREATE_WATERMARK_UNDERLAY="E12: Kann Wasserzeichen-Hintergrund nicht erstellen"
 ERROR_CREATE_WATERMARK_OVERLAY="E13: Kann Wasserzeichen-Vordergrund nicht erstellen"
@@ -40,7 +40,7 @@ ERROR_IMAGE_NOT_OK_RETRY="E27: Die Daten der Kamera scheinen kein Bild zu sein. 
 ERROR_IMAGE_NOT_OK_LAST_RETRY="E28: Die Daten der Kamera scheinen wieder kein Bild zu sein. Letzter Versuch."
 ERROR_IMAGE_NOT_OK_LAST_RETRY_DEBUG="E28: Die empfangenen Daten waren:"
 ERROR_CAMERA_LIST_LINE="E29: Wir haben die gesuchte Kamera noch nicht gefunden aber folgende Zeile in der Kameralistendatei ist ungültig. Zeile:"
-ERROR_CURL="E30: Ein Fehler list während einer CURL Operation aufgetreten."
+ERROR_CURL="E30: Ein Fehler ist während einer CURL Operation aufgetreten."
 ERROR_DEPRECATED="E31: Folgender Parameter wird nicht mehr unterstützt:"
 ERROR_GET_PARAM_STREAM="E32: Der GET Parameter stream sollte beim Miniserver nicht verwendet werden. Siehe Plugin-Dokumentation."
 ERROR_UNKNOWN="E33: Unbekannter Fehler"
@@ -56,6 +56,7 @@ ERROR_PIC_WANTED="Bild bei Aufruf gewünscht. Zeige es jetzt an."
 ERROR_SEND_EMAIL_INFO="Sende eMail weil der Parameter 'CAM_EMAIL_USED_CB' gesetzt, der SMTP Server konfiguriert und der Parameter 'CAM_NO_EMAIL_CB' nicht gesetzt ist."
 ERROR_EXIT_PLUGIN_INFO="Verlasse das Plugin normal."
 ERROR_SEND_MAIL_INFO="Sende eMail mit folgenden Absender und Empfängerdaten:"
+ERROR_INIT_CURL="curl() konnte nicht initialisiert werden. Wahrscheinlich ist das PHP-Modul curl nicht geladen."
 
 [SAVE]
 MY_NAME="Cam-Connect"
@@ -82,7 +83,6 @@ LOG_BUTTON_DELETE_WORKING="Arbeite..."
 MY_NAME="Cam-Connect"
 CFG_SAVED="Konfiguration gespeichert"
 HEADER_TEXT="Cam-Connect Standard-Konfigurationseinstellungen"
-WATERMARK_TEXT="Mit LoxBerry Wasserzeichen"
 CAM_EMAIL_USED_TEXT="eMail mit Bild senden"
 CAM_PORT_TEXT="Port:"
 EMAIL_USED_TEXT="eMail mit Kamerabild versenden"
@@ -118,7 +118,7 @@ CAM_NAME_SUGGESTION="Garten-Kamera"
 CAM_HOST_SUGGESTION="Kamera-Hostname"
 CAM_PORT_SUGGESTION="80"
 CAM_EMAIL_SENDER_SUGGESTION="LoxBerry Cam-Connect"
-CAM_EMAIL_RECIPIENTS_SUGGESTION="max@mustermann.de"
+EMAIL_RECIPIENTS_SUGGESTION="max@mustermann.de"
 CAM_EMAIL_SUBJECT1_SUGGESTION="Es wurde am"
 CAM_EMAIL_SUBJECT2_SUGGESTION="um"
 CAM_EMAIL_SUBJECT3_SUGGESTION="Uhr geklingelt."
@@ -127,7 +127,7 @@ CAM_EMAIL_SIGNATURE_SUGGESTION="Viele Grüße<br>Dein LoxBerry"
 CAM_EMAIL_DATE_FORMAT_SUGGESTION="d.m.Y"
 CAM_EMAIL_TIME_FORMAT_SUGGESTION="H:i:s"
 CAM_RECIPIENTS_TEXT="eMail-Empfänger:"
-CAM_WATERMARK_TEXT="Mit LoxBerry Wasserzeichen"
+WATERMARK_TEXT="Mit LoxBerry Wasserzeichen"
 BUTTON_CREATE_CAM="Kamera hinzufügen"
 BUTTON_DELETE_CAM="Kamera löschen"
 CAM_MODEL_TEXT="Kamera-Modell:"
@@ -148,7 +148,6 @@ CAM_NAME_HINT="Bitte einen Namen für die Kamera mit bis zu 32 Zeichen eingeben.
 CAM_NOTE_HINT="Bitte eine optionale Notiz mit bis zu 128 Zeichen eingeben. <br><small>Wenn hier ein Wert eingegeben wird, bitte sicherstellen, dass folgende erlaubte Zeichen verwendet werden: a-z A-Z 0-9 _ - ( ) . , : ; und Leerzeichen)<small>"
 CAM_RECIPIENTS_HINT="Bitte die Empfänger eingeben. Mehrere eMail Adressen durch ein Semikolon trennen."
 CAM_EMAIL_FROM_NAME_SUGGESTION="LoxBerry"
-EMAIL_RECIPIENTS_SUGGESTION="default@mustermann.com"
 CAM_HOST_HINT="Bitte die IP Adresse oder den Hostnamen der IP Kamera eingeben"
 CAM_PORT_HINT="Bitte den Port der IP Kamera eingeben"
 CAM_SELECT_OPTION="Bitte eine Kamera auswählen..."
