--- a/templates/lang/language_en.ini
+++ b/templates/lang/language_en.ini
@@ -23,7 +23,7 @@ ERROR_INVALID_EMAIL_CFG="E06: Mailserver not configured"
 ERROR_READING_CAM_MODEL="E07: Cannot read camera model"
 ERROR_INVALID_HOST_OR_IP_CFG="E08: Bad camera hostname or IP"
 ERROR_PING_ERR_HOST_OR_IP="E09: Unable to ping the IP/hostname:"
-ERROR_IMAGE_TOO_SMALL="E10: Image too small"
+ERROR_IMAGE_TOO_SMALL="E10: Camera answer not usable."
 ERROR_BAD_WATERMARK_IMAGETYPE="E11: Bad watermark filetype. Must be PNG."
 ERROR_CREATE_WATERMARK_UNDERLAY="E12: Unable to create watermark underlay."
 ERROR_CREATE_WATERMARK_OVERLAY="E13: Unable to create watermark overlay."
@@ -60,6 +60,7 @@ ERROR_PIC_WANTED="Picture in browser wanted, display it now"
 ERROR_SEND_EMAIL_INFO="Sending email because 'CAM_EMAIL_USED_CB' is set in config and SMTP server is configured and 'CAM_NO_EMAIL_CB' parameter is not set."
 ERROR_EXIT_PLUGIN_INFO="Exit plugin normally now."
 ERROR_SEND_MAIL_INFO="Sending eMail with following sender and recipient data:"
+ERROR_INIT_CURL="Unable to initialize curl(). Probably the PHP module curl is not loaded."
 
 [SAVE]
 MY_NAME="Cam-Connect"
@@ -122,7 +123,7 @@ CAM_NAME_SUGGESTION="Garden-Cam"
 CAM_HOST_SUGGESTION="Camera-Hostname"
 CAM_PORT_SUGGESTION="80"
 CAM_EMAIL_SENDER_SUGGESTION="LoxBerry Cam-Connect"
-CAM_EMAIL_RECIPIENTS_SUGGESTION="john@doe.com"
+EMAIL_RECIPIENTS_SUGGESTION="john@doe.com"
 CAM_EMAIL_SUBJECT1_SUGGESTION="Someone was today,"
 CAM_EMAIL_SUBJECT2_SUGGESTION="around"
 CAM_EMAIL_SUBJECT3_SUGGESTION="o'clock at the door."
@@ -152,7 +153,6 @@ CAM_NAME_HINT="Please enter a name for your camera with up to 32 chars. It will 
 CAM_NOTE_HINT="Please enter an optional note up to 128 chars for your camera. <br><small>If you enter a value, ensure to use the follwing allowed characters: a-z A-Z 0-9 _ - ( ) . , : ; and spaces)<small>"
 CAM_RECIPIENTS_HINT="Please enter the recipient(s). Use a semicolon to separate multiple eMail addresses."
 CAM_EMAIL_FROM_NAME_SUGGESTION="LoxBerry"
-EMAIL_RECIPIENTS_SUGGESTION="default@doe.com"
 CAM_HOST_HINT="Please enter your IP camera hostname or IP Address"
 CAM_PORT_HINT="Please enter your IP camera Port"
 CAM_SELECT_OPTION="Please select a cam..."
