--- a/templates/lang/help_de.ini
+++ b/templates/lang/help_de.ini
@@ -1,54 +1,1 @@
-
-[HELP]
-CAM_LOG_RESTART_LABEL="Neustart"
-CAM_LOG_RESTART_TEXT="Leert die Protokolldatei mit einem Klick.Die Protokollierungsstufe wird in der LoxBerry Plugin-Verwaltung eingestellt."
-CAM_LOG_OPEN_LABEL="Anzeigen"
-CAM_LOG_OPEN_TEXT="Zeigt die Protokolldatei in einem neuen Fenster bzw. in einer neuen Registerkarte an."
-CAM_SELECT_LABEL="Bitte eine Kamera auswählen..."
-CAM_SELECT_TEXT="Auswahl-Liste um zu einer bestimmten Kamera zu springen."
-ADD_CAM_LABEL="Kamera hinzufügen"
-ADD_CAM_TEXT="Fügt einen neuen Kamera-Block hinzu."
-JUMP_CAM_SELECT_LABEL="Zur Kamera-Auswahl springen"
-JUMP_CAM_SELECT_TEXT="Springt an den Anfang zur Kameraliste."
-DEL_CAM_LABEL="Kamera löschen"
-DEL_CAM_TEXT="Löscht diesen Kamera-Block ohne Nachfrage."
-CAM_NAME_LABEL="Name"
-CAM_NOTE_LABEL="Notiz"
-CAM_MODEL_LABEL="Kamera-Modell"
-CAM_IMG_WIDTH_LABEL="Bildbreite"
-CAM_IPHOST_LABEL="Kamera-IP-Adresse oder Hostname"
-CAM_PORT_LABEL="Port"
-CAM_USERNAME_LABEL="Kamera-Benutzername"
-CAM_PASSWORD_LABEL="Kamera-Passwort"
-CAM_EMAIL_LABEL="eMail mit Bild senden"
-CAM_NAME_TEXT="Optional. Name der Kamera. Wird dem eMail Betreff in eckigen Klammern vorangestellt, wenn vorhanden."
-CAM_NOTE_TEXT="Optional. Notiz zur Kamera. z.B. Montageort. Wird nicht vom Plugin benutzt - nur zur Information."
-CAM_MODEL_TEXT="Liste der unterstützten Kameras. Wähle deine Kamera aus. Wenn deine Kamera fehlt, eröffne auf <a target='github' href='https://github.com/Woersty/LoxBerry-Plugin-cam-connect/issues/new?title=Camera-Support-Request&body=Ich+habe+eine+GIB_HIER_DEIN_KAMERAMODELL_EIN+Kamera+und+will+sie+benutzen&labels=New%20cam'>GitHub</a> einen Issue und bitte um Unterstützung."
-CAM_IMG_WIDTH_TEXT="Bildbreite des Bildes welches zum Browser oder an Loxone gesendet wird. Das Original wird ggf. umgerechnet."
-CAM_IPHOST_TEXT="IP Adresse oder Hostname der Kamera."
-CAM_PORT_TEXT="IP Port der Kamera. Normalerweise 80."
-CAM_USERNAME_TEXT="Kamera-Login Benutzername"
-CAM_PASSWORD_TEXT="Kamera-Login Passwort"
-WATERMARK_LABEL="Mit LoxBerry Wasserzeichen"
-WATERMARK_TEXT="Versehe das Bild mit einem transparenten LoxBerry Wasserzeichen in der linken unteren Ecke."
-CAM_EMAIL_TEXT="Um eine eMail zu senden, wenn die Plugin URL aufgerufen wird. (Keine weitere eMail, wenn die URL zu schnell nacheinander aufgerufen wird. Mindestens 10 s Pause!)"
-CAM_EMAIL_RECIPIENTS_LABEL="eMail-Empfänger"
-CAM_EMAIL_RECIPIENTS_TEXT="Eine oder mehrere eMail-Adresse. Mehrere getrennt mit ; ohne Leerzeichen."
-CAM_EMAIL_SENDER_LABEL="Absendername"
-CAM_EMAIL_SENDER_TEXT="Der Absendername der eMail. Die Absender-eMail-Adresse wird aus den globalen LoxBerry eMail-Server-Einstellungen übernommen."
-CAM_EMAIL_SUBJECT_LABEL="Betreff"
-CAM_EMAIL_SUBJECT_TEXT="Der eMail Betreff wird aus dem Kamera-Namen (wenn vergeben) gefolgt von freiem Text, dem Datum, freiem Text, der Zeit und zum Schluß freiem Text zusammengesetzt. Details zum Datums-/Zeitformat findest du <a href='http://php.net/manual/de/function.date.php'>hier</a>.."
-CAM_EMAIL_TEXT_LABEL="Text"
-CAM_EMAIL_TEXT_TEXT="Der eMail text. Der Inhalt der eMail - wenn die Bilder in der eMail versendet werden, vor dem Bild bzw. den Bildern."
-CAM_EMAIL_SIGNATURE_LABEL="Signatur"
-CAM_EMAIL_SIGNATURE_TEXT="Die eMail Signatur. Am Ende der eMail. (Es werden zwei Striche vor der Signatur eingefügt.)"
-CAM_EMAIL_WIDTH_LABEL="Bildbreite in der eMail"
-CAM_EMAIL_WIDTH_TEXT="Die Breite der Bilder in den eMails (wenn aktiviert)."
-CAM_EMAIL_INLINE_LABEL="Kamerabild nicht als Anhang sondern im eMail-Text versenden"
-CAM_EMAIL_INLINE_TEXT="Die eMail kann die Bilder im Text anzeigen oder sie werden als Anhang versendet. Wähle, was du brauchst."
-CAM_EMAIL_DISABLE_LABEL="Vorübergehend keine eMail bei Aufruf senden"
-CAM_EMAIL_DISABLE_TEXT="Diese Auswahlmöglichkeit deaktiviert den eMail-Versand vorübergehend. Die eMail Einstellungen bleiben erhalten aber werden ignoriert."
-CAM_EMAIL_MULTI_LABEL="Sende x Bilder mit x s Abstand"
-CAM_EMAIL_MULTI_TEXT="Möglichkeit, mehr als ein Schnappschuß in einer eMail zu senden."
-CAM_EMAIL_TEST_LABEL="Test"
-CAM_EMAIL_TEST_TEXT="Der Test-Knopf öffnet ein neues Fenster um die Einstellungen zu testen. (Erst nach Speichern der Konfiguration verfügbar.)"
+language_de.ini
